# python-multiprocessing

./: CHANGES.txt  INSTALL.txt  MANIFEST.in  Makefile  README.txt  configure  configure.ac  mpconfig.h.in  setup.py
Doc/: index.rst
Doc/includes/: mp_benchmarks.py  mp_distributing.py  mp_newtype.py  mp_pool.py  mp_synchronize.py  mp_webserver.py  mp_workers.py
Lib/multiprocessing/: __init__.py  connection.py  forking.py  heap.py  managers.py  patch.py  pool.py  process.py  queues.py  sharedctypes.py  synchronize.py  tests.py
Lib/multiprocessing/dummy/: __init__.py
Lib/test/: test_multiprocessing.py
Modules/: mmapmodule.c
Modules/_multiprocessing/: connection.h  multiprocessing.h
examples/: benchmarks.py  ex_newtype.py  ex_pool.py  ex_synchronize.py  ex_webserver.py  ex_workers.py
